# woojeongalex.cloud

./: .gitattributes  .gitignore  .prettierrc  CLAUDE.md  docker-compose.yaml  pyrightconfig.json  vercel.json
.claude/: launch.json  settings.local.json
.cursor/rules/: coding-standards.mdc  titanic-inbound-router.mdc
.obsidian/: app.json  community-plugins.json  graph.json
_docs/: infra-handoff.md  n8n-mail-compose-workflow.json  n8n-titanic-report-workflow.json
a2a-mcp/: .gitignore  README.md
a2a-mcp/agents/aws_router/: pyproject.toml
a2a-mcp/agents/qwen/: pyproject.toml
a2a-mcp/shared/: pyproject.toml
a2a-mcp/shared/src/a2a_shared/: schemas.py
alexthegreat/: .metadata
alexthegreat/_docs/: 이음_FlutterFlow_화면기획서.md
alexthegreat/web/: manifest.json
alexview/: .npmrc  CLAUDE.md  REACT_RULES.md  README.md  next.config.mjs  package.json  pnpm-lock.yaml
alexview/_docs/: darkmode-sepc.md
alexview/app/: globals.css  page.tsx
alexview/components/: crawler-scraper-banner.tsx  exaone-chat-banner.tsx  gemini-chat.tsx  iuem-guide-carousel.tsx  site-header.tsx  vocal-video-dropzone.tsx  weather-widget.tsx  weekly-king-banner.tsx
alexview/hooks/: use-availability-check.ts
alexview/lib/: analyze-media.ts  auth-client.ts  auth-messages.ts  auth-session.ts  auth-types.ts  exaone-chat.ts  gemini-generate.ts  instrument-api.ts  song-mr-api.ts  speech-api.ts  star-craft-api.ts  user-facing-error.ts
com.woojoengalex/: .markdownlint.json  .pre-commit-config.yaml  CURSOR.md  agent.md  docker-compose.yaml  n8n_gmail_inbox_workflow.json
com.woojoengalex/.claude/: launch.json
com.woojoengalex/.obsidian/: appearance.json  workspace.json
com.woojoengalex/alexthegreat/: README.md  analysis_options.yaml  pubspec.yaml
com.woojoengalex/alexview/: .gitignore  Dockerfile  Dockerfile.dev  package.json
com.woojoengalex/woojeongai/: CLAUDE.md  (+5 more)
scripts/: generate_jwt_keys.sh
woojeongai/: .gitignore  Dockerfile  README.md  auth_main.py  main.py  pyrightconfig.json  requirements.txt  setup.cfg
(+653 files in other folders)
