[project]
name = "agent-aws-router"
version = "0.1.0"
description = "AWS 오케스트레이터/라우터 에이전트 (LLM 없음, MCP 경유 위임)"
requires-python = ">=3.11"
dependencies = [
    "a2a-shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "mcp>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.uv.sources]
a2a-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_aws_router"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
